Prevent vertical overflow

--- a/public/css/gradient.css
+++ b/public/css/gradient.css
@@ -101,3 +101,17 @@ input {
 #create {
     padding: 10px 25px;
 }
+
+h1 {
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+h2 {
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+.prev-msgs {
+    margin-bottom: 50px;
+}
